@@ -1,4 +1,4 @@
-/* $Id: file.c,v 1.221 2003/04/13 18:36:51 ukai Exp $ */
+/* $Id: file.c,v 1.222 2003/04/14 03:29:38 ukai Exp $ */
 #include "fm.h"
 #include <sys/types.h>
 #include "myctype.h"
@@ -2043,7 +2043,8 @@ loadGeneralFile(char *path, ParsedURL *volatile current, char *referer,
 	t_buf->bufferprop |= BP_FRAME;
     }
 #ifdef USE_SSL
-    t_buf->ssl_certificate = f.ssl_certificate;
+    if (t_buf)
+	t_buf->ssl_certificate = f.ssl_certificate;
 #endif
     frame_source = flag & RG_FRAME_SRC;
     b = loadSomething(&f, pu.real_file ? pu.real_file : pu.file, proc, t_buf);
